Add db migration tool

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,11 @@
 FROM golang:1.16.5
 
 ENV GOPATH=
+ENV PATH=/root/go/bin:$PATH
 
 COPY go.* ./
 RUN go mod download
+RUN go get -v github.com/rubenv/sql-migrate/...
 
 WORKDIR "/app"
 
