--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,27 @@
-FROM node:14.17.2
+# Develop
+FROM node:14.17.2 as dev-env
 
 ENV PATH=/node_modules/.bin:$PATH
-
-COPY package*.json ./
-RUN npm install -g
 
 WORKDIR "/app"
 
 EXPOSE 3000
 
-ENTRYPOINT ["npm", "start"]
+# Build
+FROM node:14.17.2 as build-env
+
+WORKDIR /work
+COPY . .
+RUN npm ci
+RUN npm run build
+
+# Product
+FROM node:14.17.2 as prod-env
+
+WORKDIR /app
+COPY --from=build-env /work/build /app/build
+RUN npm install serve
+
+EXPOSE 5000
+
+ENTRYPOINT ["npx", "serve", "-s", "build"]
