--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,10 @@ services:
       - "./frontend:/app"
       - "/app/node_modules"
     ports: 
-      - "3000:3000"
+      - "${FRONT_PORT}:3000"
+    environment:
+      BACKEND_HOST: ${BACKEND_HOST}
+      BACKEND_PORT: ${BACKEND_PORT}
     tty: true
     entrypoint: "bash -c 'npm i && npm run start'"
 
@@ -22,7 +25,13 @@ services:
     volumes:
       - "./backend:/app"
     ports: 
-      - "1323:1323"
+      - "${BACKEND_PORT}:1323"
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
     tty: true
     entrypoint: "air"
   
@@ -33,6 +42,9 @@ services:
       target: "dev-env"
     volumes:
       - "./judge:/app"
+    environment:
+      BACKEND_HOST: ${BACKEND_HOST}
+      BACKEND_PORT: ${BACKEND_PORT}
     tty: true
     entrypoint: "air"
 
@@ -42,12 +54,12 @@ services:
     volumes:
       - "db_store:/var/lib/mysql"
     ports:
-      - "3306:3306"
+      - "${DB_PORT}:3306"
     environment:
-      MYSQL_DATABASE: "online_judge"
-      MYSQL_USER: "develop"
-      MYSQL_PASSWORD: "password"
-      MYSQL_ROOT_PASSWORD: "rootpassword"
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
 
   swagger:
     container_name: "swagger"
@@ -57,7 +69,7 @@ services:
     environment:
       API_URL: "openapi.yml"
     ports:
-        - "3300:8080"
+        - "${API_DOC_PORT}:8080"
 
 volumes:
   db_store:
