Add redis service

--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,10 @@ DB_ROOT_PASSWORD=rootpassword
 BACKEND_HOST=backend
 BACKEND_PORT=1323
 
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=password
+
 FRONT_PORT=3000
 
 API_DOC_PORT=3300
