Change document service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,15 +71,13 @@ services:
     ports:
       - "${REDIS_PORT}:6379"
 
-  swagger:
-    container_name: "swagger"
-    image: swaggerapi/swagger-ui
+  nginx:
+    container_name: "nginx"
+    image: nginx:1.21.3
     volumes:
-      - "./docs/openapi.yml:/usr/share/nginx/html/openapi.yml"
-    environment:
-      API_URL: "openapi.yml"
+      - ./docs:/usr/share/nginx/html
     ports:
-        - "${API_DOC_PORT}:8080"
+      - "${API_DOC_PORT}:80"
 
 volumes:
   db_store:
