Fix db migrate config

--- a/backend/db/dbconfig.yml
+++ b/backend/db/dbconfig.yml
@@ -1,5 +1,5 @@
 development:
   dialect: mysql
-  datasource: develop:password@tcp(db:3306)/online_judge?parseTime=true
+  datasource: ${DB_USER}:${DB_PASSWORD}@tcp(${DB_HOST}:${DB_PORT})/${DB_DATABASE}?parseTime=true
   dir: migrations
   table: migrations
