--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,4 +1,4 @@
-name: backend_ci
+name: backend
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
       - reopened
 
 jobs:
-  backend_ci:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -22,12 +22,6 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
-
-      - name: Use cache
-        uses: actions/cache@v2
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-backend-${{ hashFiles('backend/go.sum') }}
 
       - name: Get dependencies
         working-directory: ./backend
