--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       BACKEND_HOST: ${BACKEND_HOST}
       BACKEND_PORT: ${BACKEND_PORT}
     tty: true
-    entrypoint: "bash -c 'npm i && npm run start'"
+    entrypoint: "bash -c 'yarn install && yarn start'"
 
   backend:
     container_name: "backend"
