Add minio container

--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,12 @@ DB_ROOT_PASSWORD=rootpassword
 BACKEND_HOST=backend
 BACKEND_PORT=1323
 
+MINIO_HOST=minio
+MINIO_PORT=9000
+MINIO_CONSOLE=9001
+MINIO_ROOT_USER=develop
+MINIO_ROOT_PASSWORD=password
+
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=password
