--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,10 @@ services:
       REDIS_HOST: ${REDIS_HOST}
       REDIS_PORT: ${REDIS_PORT}
       REDIS_PASSWORD: ${REDIS_PASSWORD}
+      MINIO_HOST: ${MINIO_HOST}
+      MINIO_PORT: ${MINIO_PORT}
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     tty: true
     entrypoint: "air"
   
@@ -71,6 +75,19 @@ services:
     ports:
       - "${REDIS_PORT}:6379"
 
+  minio:
+    container_name: "minio"
+    image: minio/minio:RELEASE.2021-11-24T23-19-33Z.fips
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio:/data
+    ports:
+      - "${MINIO_PORT}:9000"
+      - "${MINIO_CONSOLE}:9001"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+
   nginx:
     container_name: "nginx"
     image: nginx:1.21.3
@@ -81,3 +98,4 @@ services:
 
 volumes:
   db_store:
+  minio:
