--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -55,5 +55,19 @@ services:
     ports:
       - "${REDIS_PORT}:6379"
 
+  minio:
+    container_name: "minio"
+    image: minio/minio:RELEASE.2021-11-24T23-19-33Z.fips
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio:/data
+    ports:
+      - "${MINIO_PORT}:9000"
+      - "${MINIO_CONSOLE}:9001"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+
 volumes:
   db-store:
+  minio:
